  obtained with ReflectionClass::getProperties(). (Gustavo)
- Fixed covariance of return-by-ref constraints. (Etienne)
- Fixed the filter extension accepting IPv4 octets with a leading 0 as that
  belongs to the unsupported "dotted octal" representation. (Gustavo)

- Fixed bug #53323 (pdo_firebird getAttribute() crash).
  (preeves at ibphoenix dot com)
- Fixed bug #53305 (E_NOTICE when defining a constant starts with
  __COMPILER_HALT_OFFSET__). (Felipe)
- Fixed bug #53297 (gettimeofday implementation in php/win32/time.c can return
  1 million microsecs). (ped at 7gods dot org)
- Fixed bug #53284 (Valgrind warnings in oci_set_* functions) (Oracle Corp.)
- Fixed bug #53279 (SplFileObject doesn't initialise default CSV escape
  character). (Adam)
- Fixed bug #53273 (mb_strcut() returns garbage with the excessive length
  parameter). (CVE-2010-4156) (Mateusz Kocielski, Pierre, Moriyoshi)
- Fixed bug #53248 (rawurlencode RFC 3986 EBCDIC support misses tilde char).
  (Justin Martin)
- Fixed bug #53241 (stream casting that relies on fdopen/fopencookie fails
  with streams opened with, inter alia, the 'xb' mode). (Gustavo)
- Fixed bug #53236 (problems in the validation of IPv6 addresses with leading
  and trailing :: in the filter extension). (Gustavo)
- Fixed bug #53226 (file_exists fails on big filenames). (Adam)
- Fixed bug #53198 (changing INI setting "from" with ini_set did not have any
  effect). (Gustavo)
- Fixed bug #53180 (post_max_size=0 not disabling the limit when the content
  type is application/x-www-form-urlencoded or is not registered with PHP).
  (gm at tlink dot de, Gustavo)
- Fixed bug #53144 (Segfault in SplObjectStorage::removeAll()). (Felipe)
- Fixed bug #53141 (autoload misbehaves if called from closing session).
  (ladislav at marek dot su)
- Fixed bug #53136 (Invalid read on openssl_csr_new()). (Felipe)
- Fixed bug #53071 (SPLObjectStorage defeats gc_collect_cycles). (Gustavo)